--- a/app/assets/stylesheets/foundation_and_overrides.css.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.css.scss
@@ -7,7 +7,7 @@ $contentareaheight: 500px;
 }
 
 .sandbox {
-  background-color: #c7c7c7;
+  /*background-color: #c7c7c7;*/
   border: 1px solid black;
   height: $contentareaheight;
   padding: 0;
@@ -31,8 +31,8 @@ $contentareaheight: 500px;
 canvas {
   width: 100%;
   height: 100%;
-  background-color: yellow;
-  opacity: 0.2;
+  /*background-color: yellow;*/
+  /*opacity: 0.2;*/
 
 }
 
