--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -8,7 +8,15 @@
   <div class="large-8 small-8 columns sandbox">
   	<canvas id="myCanvas"></canvas>
   </div>
-  <div class="large-3 small-3 columns right-sidebar"><p></p></div>
+  <div class="large-3 small-3 columns right-sidebar"><p></p>
+  	<ul>
+  		<li id="triangle">TRIANGLE</li>
+  		<li id="square">SQUARE</li>
+  		<li id="rectangle">RECTANGLE</li>
+  		<li id="circle">CIRCLE</li>
+  		<!-- <li id="clear_canvas">CLEAR CANVAS</li> -->
+  	</ul>
+  </div>
 </div>
 
 <div class="row footer">
